2007-06-21  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/module_list.c (module_kill):
	fix possible core dump when using startup modules

2007-06-10  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	* fvwm/builtins.c (CMD_PrintInfo):
	* libs/Picture.h (PicturePrintImageCache):
	* libs/Picture.c (PicturePrintImageCache):
	add ImageCache subject to PrintInfo command

2007-06-07  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	* fvwm/events.c (My_XNextEvent):
	fix crash when a module closes down during input/output.

2007-06-03  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/icons.c (ChangeIconPixmap, DeIconify, Iconify):
	* fvwm/focus.c (warp_to_fvwm_window):
	* fvwm/events.c (__handle_cr_restack)
	(__handle_bpress_on_managed, HandlePropertyNotify):
	* fvwm/stack.h:
	* fvwm/stack.c (__restack_window, __raise_lower_recursion)
	(__raise_or_lower_window, raise_or_lower_window)
	(position_new_window_in_stack_ring, RaiseWindow, LowerWindow)
	(RestackWindow, HandleUnusualStackmodes, CMD_Raise, CMD_Lower)
	(CMD_RestackTransients, CMD_RaiseLower):
	do raise hacks even when the internal stack is intact, unless on a
	client request

2007-06-03  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/style.c (check_window_style_change)
	(style_parse_one_style_option):
	* fvwm/style.h:
	* fvwm/fvwm.h (window_style):
	* fvwm/add_window.c (setup_frame_size_limits):
	* fvwm/geometry.c (constrain_size):
	new style MinWindowSize

2007-05-30  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/System.h:
	added missing prototypes

	* libs/safemalloc.c:
	* libs/fio.c:
	* libs/envvar.c:
	* libs/XResource.c:
	* libs/XError.c:
	* libs/WinMagic.c:
	* libs/Target.c:
	* libs/Event.c (GetSubwindowFromEvent):
	* libs/Cursor.c:
	* libs/ColorUtils.c:
	include corresponding header files

	* libs/PictureBase.c:
	* libs/FlocaleCharset.c:
	* fvwm/ewmh.c:
	cleanup prototypes

2007-05-27  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>
