@@ -58,6 +58,9 @@ Changes in beta release 2.5.22 (not released yet)
      correctly.
    - Fixed a possible crash with modules closing down.
    - Fixed broken demo script fvwm_make_browse_menu.sh.
+   - The conditon following a comma separator without whitespace
+     padding was previously ignored if the presiding condition was
+     multi-worded.
 
 -------------------------------------------------------------------
 
