@@ -1,3 +1,8 @@
+2007-07-07  Simon Griph  <simon(at)griph(dot)se>
+
+	* fvwm/conditionals.xml:
+	clarified that comma is the prefered condition separator
+
 2007-07-04  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
 
 	* Makefile.am:
